# eee4113f-project

./: .gitignore  README.md
.github/workflows/: verify.yml
.zed/: debug.json
PCB Files/: ComsBoard.csv  ComsBoard.kicad_pcb  ComsBoard.kicad_prl  ComsBoard.kicad_pro  ComsBoard.kicad_sch
PCB Files/production_files/: EEE4113F_2026_Group_5_JNSGLE007_BOM_EmbeddedSys.csv  EEE4113F_2026_Group_5_JNSGLE007_CPL_EmbeddedSys.csv
STM32-SW/F4/: .cproject  .gitignore  .mxproject  .project  F4.ioc
STM32-SW/L4/: .gitignore  .mxproject  .stm32env  L4_V3.ioc  Makefile  STM32-for-VSCode.config.yaml  STM32Make.make  openocd.cfg
TestingSW/LORA_BOUY_SIDE/: platformio.ini
TestingSW/LORA_MODULE/: platformio.ini
TestingSW/SERIAL_FORWARDER/: platformio.ini
TestingSW/SHARC_BUOY/: platformio.ini
TestingSW/WIFI_LORA/: lora_send.sh
TestingSW/WiFI_Offload/: SHARC_BUOY.code-workspace  platformio.ini
control-panel/: Cargo.toml
control-panel/control-core/: Cargo.toml
control-panel/control-core/src/: crc.rs  db.rs  drivers.rs  export.rs  lib.rs  lora.rs  mock.rs  mock2.rs  serial.rs  utils.rs  wifi.rs
control-panel/control-core/src/lora/: sender.rs
control-panel/control-core/src/wifi/: receiver.rs  rx.rs
control-panel/control-data-link/: Cargo.toml  README.md  build.rs
control-panel/control-gui/: Cargo.toml  build.rs
control-panel/control-gui/src/: colour_bar.rs  db.rs  export.rs  main.rs  utils.rs
control-panel/control-gui/ui/: colour_bar.slint  datadump.slint  download_bar.slint  export.slint  launch_error.slint  lora.slint  lucida.slint  main.slint  radio.slint  ringbuffer.slint  status.slint  statusbar.slint  storage.slint  theme.slint  wifi.slint
control-panel/control-protocol/: Cargo.toml
control-panel/control-protocol-static/: Cargo.toml
control-panel/control-protocol-static/src/: lib.rs
control-panel/control-serial-ports/: Cargo.toml
control-panel/control-sys/: Cargo.toml  README.md
control-panel/gui/: Cargo.toml  build.rs
control-panel/mock-module/: Cargo.toml  build.rs  run.sh  verify_blocks.py
controller/: README.md
controller/gui/: README.md
controller/net-driver/: README.md
enclosure_subsystem/: README.md
enclosure_subsystem/Data_Logs/: readme_sb01.md  readme_sb04.md
enclosure_subsystem/MATLAB_Code/: Hydrostatic_Simulation.m
enclosure_subsystem/Model_Files/: ballast_body.stl  ballast_lid.stl  ballast_nut.stl  ballast_screw.stl  component_holder.stl  connector_pod.stl  floatation_Ring.stl  sb_cover.stl
laptop-drivers/: Makefile  atp02_buoy_10m.txt  atp02_buoy_1m.txt  atp02_buoy_200m.txt  atp02_buoy_20m.txt  atp02_ship_1m.txt  atp02_ship_200m.txt  atp02_ship_desk1.txt  desktest.csv  test100m.csv  test10m.csv  test1m.csv  test_wifi
laptop-drivers/RF_ATPs/: atp02_buoy_100m.txt  atp02_buoy_150m.txt  atp02_buoy_201m.txt  atp02_buoy_50m.txt  (+19 more)
module/: README.md
(+91 files in other folders)
