[package]
name = "control-core"
version = "0.1.0"
edition = "2024"

[dependencies]
control-sys = { path = "../control-sys" }
control-protocol = { path = "../control-protocol" }
crc = "3.4.0"
crossbeam-channel = "0.5.15"
rand = "0.10.1"
crc-fast = "1.10.0"
smol = "2.0.2"

[dev-dependencies]
control-protocol = { path = "../control-protocol", features = ["test-utils"]}

