[package]
name = "control-gui"
version = "0.1.0"
edition = "2024"
publish = false
build = "build.rs"

[dependencies]
control-core = { path = "../control-core" }
slint = "1.16.1"
crossbeam-channel = "0.5.15"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
single-instance = "0.3.3"

[build-dependencies]
slint-build = "1.16.1"
