[package]
name = "control-gui"
version = "0.1.0"
edition = "2024"
publish = false
build = "build.rs"

[dependencies]
control-core = { path = "../control-core" }
slint = { git = "https://github.com/slint-ui/slint", branch = "master" }
crossbeam-channel = "0.5.15"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
single-instance = "0.3.3"
rfd = "0.17.2"
serde = "1.0.228"

[build-dependencies]
slint-build = { git = "https://github.com/slint-ui/slint", branch = "master" }
